--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,13 @@ services:
   #     - PMA_ARBITRARY=1
   #   depends_on:
   #     - db
-  # db:
-  #   image: mariadb
-  #   environment:
-  #     MARIADB_ROOT_PASSWORD: abc123.
-  #   volumes:
-  #     - db:/var/lib/mysql
-# docker run -v "./lamp:/app" -v "./cert:/etc/letsencrypt" -v "./log/cert:/var/log/letsencrypt" -it certbot/certbot certonly -v --reinstall --manual --preferred-challenges=dns -d *.adanfj.dedyn.io --staging --email a21adanff@iessanclemente.net --agree-tos --force-renewal --no-eff-email
+  db:
+    image: mariadb
+    environment:
+      MARIADB_ROOT_PASSWORD: abc123.
+    volumes:
+      - db:/var/lib/mysql
+  # docker run -v "./lamp:/app" -v "./cert:/etc/letsencrypt" -v "./log/cert:/var/log/letsencrypt" -it certbot/certbot certonly -v --reinstall --manual --preferred-challenges=dns -d *.adanfj.dedyn.io --staging --email a21adanff@iessanclemente.net --agree-tos --force-renewal --no-eff-email
   # cert:
   #   image: certbot/certbot
   #   # restart: unless-stopped
@@ -36,11 +36,10 @@ services:
     image: nginx:alpine
     restart: unless-stopped
     volumes:
-      - ./app:/app/symfony
       - ./lamp:/var/www/html
-      - ./nginx:/etc/nginx/conf.d/
-      - ./log/nginx:/var/log/nginx/
       - ./cert:/etc/letsencrypt
+      - ./config/nginx:/etc/nginx/conf.d/
+      - ./log/nginx:/var/log/nginx/
     ports:
       - 80:80
       - 443:443
@@ -56,12 +55,12 @@ services:
     restart: unless-stopped
     volumes:
       - ./lamp:/var/www/html
-      - ./config/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
-    # depends_on:
-    #   - db
+      # - ./config/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
+    depends_on:
+      - db
 
   web-symfony:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
       target: deploy-symfony
@@ -72,9 +71,11 @@ services:
       MARIADB_PASSWORD: 1q2w3e4r5t6y
       MARIADB_DATABASE: symfony
     volumes:
-      - ./app:/app
-    # depends_on:
-    #   - db
+      - ./lamp:/var/www/html
+    # ports:
+    #   - 8000:8000
+    depends_on:
+      - db
 
 volumes:
   db:
