--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,16 +1,16 @@
-server {
-  listen 80;
-  server_name ~^(.*)\.adanfj\.dedyn\.io$;
-  server_tokens off;
+# server {
+#   listen 80;
+#   server_name ~^(.*)\.adanfj\.dedyn\.io$;
+#   server_tokens off;
 
-  location / {
-    return 301 https://$host$request_uri;
-  }
-}
+#   location / {
+#     return 301 https://$host$request_uri;
+#   }
+# }
 
 server {
   listen 443 ssl;
-  # include /etc/nginx/mime.types;
+  include /etc/nginx/mime.types;
 
   server_name symfony.adanfj.dedyn.io;
   ssl_certificate /etc/letsencrypt/live/adanfj.dedyn.io/fullchain.pem;
@@ -20,17 +20,17 @@ server {
   }
 }
 
-# server {
-#   listen 443 ssl;
-#   include /etc/nginx/mime.types;
+server {
+  listen 443 ssl;
+  include /etc/nginx/mime.types;
 
-#   server_name phpmyadmin.adanfj.dedyn.io;
-#   ssl_certificate /etc/letsencrypt/live/adanfj.dedyn.io/fullchain.pem;
-#   ssl_certificate_key /etc/letsencrypt/live/adanfj.dedyn.io/privkey.pem;
-#   location / {
-#     proxy_pass http://admin:8000;
-#   }
-# }
+  server_name phpmyadmin.adanfj.dedyn.io;
+  ssl_certificate /etc/letsencrypt/live/adanfj.dedyn.io/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/adanfj.dedyn.io/privkey.pem;
+  location / {
+    proxy_pass http://admin:80;
+  }
+}
 
 
 server {
