--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,37 +2,6 @@ version: '3.9'
 
 services:
 
-  # admin:
-  #   image: phpmyadmin:fpm-alpine
-  #   ports:
-  #     - 8080:8080
-  #     - 8000:8000
-  #   environment:
-  #     - PMA_ARBITRARY=1
-  #   depends_on:
-  #     - db
-  db:
-    image: mariadb
-    environment:
-      MARIADB_ROOT_PASSWORD: abc123.
-    volumes:
-      - db:/var/lib/mysql
-      - ./db:/docker-entrypoint-initdb-d/
-  # docker run -v "./lamp:/app" -v "./cert:/etc/letsencrypt" -v "./log/cert:/var/log/letsencrypt" -it certbot/certbot certonly -v --reinstall --manual --preferred-challenges=dns -d *.adanfj.dedyn.io --staging --email a21adanff@iessanclemente.net --agree-tos --force-renewal --no-eff-email
-  # cert:
-  #   image: certbot/certbot
-  #   # restart: unless-stopped
-  #   # entrypoint:
-  #   #         - 'rm -Rf /etc/letsencrypt/live/* && rm -Rf /etc/letsencrypt/archive/* && rm -Rf /etc/letsencrypt/renewal/*'
-  #   command: >-
-  #     certonly -v --reinstall --manual --preferred-challenges=dns -d *.adanfj.dedyn.io --staging --email a21adanff@iessanclemente.net --agree-tos --force-renewal --no-eff-email
-  #   volumes:
-  #     - ./lamp:/app
-  #     - ./cert:/etc/letsencrypt
-  #     - ./log/cert:/var/log/letsencrypt
-  #   depends_on:
-  #     - server
-
   server:
     image: nginx:alpine
     restart: unless-stopped
@@ -73,11 +42,7 @@ services:
       MARIADB_DATABASE: symfony
     volumes:
       - ./lamp:/var/www/html
+      - ./config/symfony/prod/.env:/var/www/html/symfony/.env
     # ports:
     #   - 8000:8000
-    depends_on:
-      - db
 
-volumes:
-  db:
-  mysql:
