--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -20,17 +20,17 @@ server {
   }
 }
 
-server {
-  listen 443 ssl;
-  include /etc/nginx/mime.types;
+# server {
+#   listen 443 ssl;
+#   include /etc/nginx/mime.types;
 
-  server_name phpmyadmin.adanfj.dedyn.io;
-  ssl_certificate /etc/letsencrypt/live/adanfj.dedyn.io/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/adanfj.dedyn.io/privkey.pem;
-  location / {
-    proxy_pass http://admin:80;
-  }
-}
+#   server_name phpmyadmin.adanfj.dedyn.io;
+#   ssl_certificate /etc/letsencrypt/live/adanfj.dedyn.io/fullchain.pem;
+#   ssl_certificate_key /etc/letsencrypt/live/adanfj.dedyn.io/privkey.pem;
+#   location / {
+#     proxy_pass http://admin:80;
+#   }
+# }
 
 
 server {
