--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -8,6 +8,7 @@ server {
   }
 }
 
+#Symfony https server
 server {
   listen 443 ssl;
   include /etc/nginx/mime.types;
@@ -21,6 +22,7 @@ server {
   }
 }
 
+# phpMyAdmin (dev, uncomment if service is present)
 # server {
 #   listen 443 ssl;
 #   include /etc/nginx/mime.types;
@@ -33,7 +35,7 @@ server {
 #   }
 # }
 
-
+# Default https server
 server {
   listen 443 ssl;
   include /etc/nginx/mime.types;
